summer-jaeb/tests/compile_fail/wrong_return_type.stderr
error: #[event_listener] function must return `HandlerResult`
 --> tests/compile_fail/wrong_return_type.rs:9:39
  |
9 | async fn on_event(event: &MyEvent) -> Result<(), String> {
  |                                       ^^^^^^^^^^^^^^^^^^
